--- a/style.css
+++ b/style.css
@@ -190,33 +190,8 @@ border-radius: 20px !important;
     
 }
 
-/* .content{
-    filter: blur(5px);
-} */
 
-#addEmployee{
-    display: none;
-    position: absolute !important;
-    left: calc(50% - 390px);
-    top: 40px !important;
-    
-}
 
-#empEdit{
-    display: none;
-    position: absolute !important;
-    left: calc(25% );
-    top: 40px !important;
-    overflow: auto;
-}
-
-#empDelete{
-    display: none;
-    position: absolute !important;
-    left: calc(50% - 118px);
-    top: calc(50% - 90px);
-    z-index: 1000;
-}
 
 .employee-details{
     display: none !important;
@@ -390,3 +365,47 @@ border-radius: 20px !important;
     width: 100px;
     height: 100px;
   }
+
+  #overlay{
+    display: none;
+ width: 100%;
+ height: 100vh;
+ position: absolute;
+ top: 0;
+ background-color: #1a1a1b !important;
+ z-index: 999;
+ opacity: .6;
+  }
+
+
+
+#addEmployee{
+    display: none;
+    position: absolute !important;
+    left: calc(50% - 390px);
+    top: 40px !important;
+    z-index: 1000;
+}
+
+#empEdit{
+    display: none;
+    position: absolute !important;
+    left: calc(25% );
+    top: 40px !important;
+    overflow: auto;
+    z-index: 1000;
+}
+
+#empDelete{
+    display: none;
+    position: absolute !important;
+    left: calc(50% - 118px);
+    top: calc(50% - 90px);
+    z-index: 1000;
+}
+
+#addEmpImg{
+    width: 100px;
+    height: 100px;
+    display: none;
+}
