--- a/style.css
+++ b/style.css
@@ -335,7 +335,7 @@ border-radius: 20px !important;
 } 
 
 .card-scroll-card::-webkit-scrollbar {
-    width: 12px;               /* width of the entire scrollbar */
+    width: 0px;               /* width of the entire scrollbar */
   }
   
   .card-scroll-card::-webkit-scrollbar-track {
@@ -409,3 +409,29 @@ border-radius: 20px !important;
     height: 100px;
     display: none;
 }
+
+.aTag{
+    text-decoration: none;
+    color: #2B3674;
+}
+
+.tableCard{
+    max-height: 68vh !important;
+    overflow: auto;
+}
+  
+  .tableCard::-webkit-scrollbar-track {
+    background: rgb(255, 255, 255);        /* color of the tracking area */
+  }
+  
+  .tableCard::-webkit-scrollbar-thumb {
+    background-color: rgb(255, 255, 255);    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 3px solid rgb(255, 255, 255);  /* creates padding around scroll thumb */
+  }
+
+  .tableCard::-webkit-scrollbar {
+    width: 0px;               /* width of the entire scrollbar */
+  }
+  
+  
